--- a/NewsLetter.html
+++ b/NewsLetter.html
@@ -6,13 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
   </head>
-
+<topnav class="topnav">
   <li><a href="index.html">About us</a></li>
   <li><a href="ot.html">Our opening times</a></li>
   <li><a href="Menu.html">Menu</a></li>
   <li><a href="NewsLetter.html">News Letter</a></li>
-  <li><a href="Menu.html"><button type="button">Click Me!</button>
+  <li><a href="Menu.html"><button type="button">Order Now!</button>
   <li><a href="https://en-gb.facebook.com/business/products/pages">Our Facebook</a>
+</topnav>
 
 <form action="action_page.php">
   <div class="container">
@@ -23,12 +24,18 @@
     <input type="text" placeholder="Name" name="name" required>
     <input type="text" placeholder="Email address" name="mail" required>
     <label>
-      <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
+      <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter if not ticked they will be weekly newsletters
     </label>
   </div>
 
   <div class="container">
     <input type="submit" value="Subscribe">
   </div>
+</nav>
+
+
+  <footer>
+      <p>©Cafe Esprassa2018 all rights reserved</p>
+  <footer>
 </form>
 <body>
