--- a/Menu.html
+++ b/Menu.html
@@ -21,7 +21,7 @@
       <li><a href="ot.html">Our opening times</a></li>
       <li><a href="Menu.html">Menu</a></li>
       <li><a href="NewsLetter.html">News Letter</a></li>
-      <li><a href="Menu.html"><button type="button">Click Me!</button>
+      <li><a href="Menu.html"><button type="button">Order Now!</button>
       <li><a href="https://en-gb.facebook.com/business/products/pages">Our Facebook</a>
     </ul>
   </nav>
