--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
       <li><a href="ot.html">Our opening times</a></li>
       <li><a href="Menu.html">Menu</a></li>
       <li><a href="NewsLetter.html">News Letter</a></li>
-      <li><a href="Menu.html"><button type="button">Click Me!</button>
+      <li><a href="Menu.html"><button type="button">Order Now!</button>
       <li><a href="https://en-gb.facebook.com/business/products/pages">Our Facebook</a>
     </ul>
   </nav>
 
   <article>
     <h1>About us</h1>
-    <p>Cafe Esprassa is located in Peebles Scottish Borders our main goal is to make vegan friendly coffee while also giving 100% of our profits to Treesforlife within our first year we have planted over 3000 trees.</p>
+    <p>Café Esperanza was founded summer 2017 and is a social enterprise that aims to support the environment by giving 100% of its profits to TreesforLife. We are a coffee shop based in Peebles, Scottish Borders, offering our customers a selection of vegetarian and vegan foods and beverages. In our first year, we helped to plant over 3,000 trees. Our menu is filled with all sorts of vegan drinks and foods this includes our notorious coffee that has taken the Scottish Borders by storm.
+
+</p>
     <p></p>
   </article>
 </section>
 
 <footer>
-  <p>Footer</p>
+  <p>©Cafe Esprassa2018 all rights reserved</p>
 </footer>
 
 </body>
